--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2023-06-27 21:49+0200\n"
+"PO-Revision-Date: 2024-09-10 19:49+0200\n"
 "Last-Translator:  Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team:  Czech <provoz@debian.cz>\n"
 "Language: cs\n"
@@ -535,6 +535,9 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Firmware je druh softwaru poskytující nízkoúrovňové řízení hardwarových "
+"komponent (např. Wi-Fi karet nebo audio čipů), které bez něj mohou fungovat "
+"omezeně, nebo vůbec."
 
 #. Type: boolean
 #. Description
@@ -546,6 +549,10 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"Přestože není součástí Debianu, byl některý nesvobodný firmware upraven, aby "
+"s Debianem pracoval. Tento firmware má různé licence, které omezují vaši "
+"svobodu používat, upravovat nebo sdílet software a obvykle neposkytuje "
+"zdrojovou podobu, kterou byste mohli studovat."
 
 #. Type: boolean
 #. Description
