--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -32,7 +32,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2024-01-29 20:01+0000\n"
+"PO-Revision-Date: 2024-11-24 22:01+0000\n"
 "Last-Translator: Kristjan Räts <kristjanrats@gmail.com>\n"
 "Language-Team: Estonian <>\n"
 "Language: et\n"
@@ -547,6 +547,9 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Põsivara on programm mõningate riistvarakomponentide (nagu Wi-Fi kaardid või "
+"audio kiibistikud) juhtimiseks, sest ilma püsivarata töötavad nad kas "
+"osaliselt või ei tööta üleüldse."
 
 #. Type: boolean
 #. Description
@@ -558,6 +561,10 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"Kuigi tegemist ei ole Debiani osadega, on mõned mitte-vabad püsivarad tehtud "
+"Debianis kasutatavaks. Sellised püsivarad on erinevate litsentsidega, mis "
+"võivad piirata su vabadust tarkvara kasutamisel, muutmisel või jagamisel; "
+"samuti ei ole neil tavaliselt lähtekoodi, millega sa saaksid tutvuda."
 
 #. Type: boolean
 #. Description
