--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -38,8 +38,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2023-10-25 06:04+0000\n"
-"Last-Translator: Zi Jiaxu <Shelpdicriter@users.noreply.hosted.weblate.org>\n"
+"PO-Revision-Date: 2024-09-09 09:09+0000\n"
+"Last-Translator: NtskwK <natsukawa247@outlook.com>\n"
 "Language-Team: <debian-l10n-chinese@lists.debian.org>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
@@ -533,6 +533,8 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Firmware 是一种为某些硬件组件（例如Wi-Fi卡或音频芯片组）提供低级控制的软件，"
+"如果没有它，这些硬件组件可能无法完全或根本无法运行。"
 
 #. Type: boolean
 #. Description
@@ -544,6 +546,9 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"尽管根本不是 Debian 的一部分，但一些非自由的硬件是为了与 Debian 一起工作。此"
+"硬件具有不同的许可证，限制了您使用、修改或共享软件的自由，并且通常没有您可以"
+"学习的源表格。"
 
 #. Type: boolean
 #. Description
