--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -30,8 +30,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2024-05-04 07:07+0000\n"
-"Last-Translator: Norimitsu SUGIMOTO <dictoss@live.jp>\n"
+"PO-Revision-Date: 2024-11-10 04:00+0000\n"
+"Last-Translator: Sadaharu Wakisaka <informatiekantoor@gmail.com>\n"
 "Language-Team: Debian L10n Japanese <debian-japanese@lists.debian.org>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -545,6 +545,8 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"ファームウェアはある種の内部レベルソフトウェアで、Wi-Fiカードやオーディオチッ"
+"プなどを制御します、これなしには全機能を活用することができません。"
 
 #. Type: boolean
 #. Description
@@ -556,6 +558,10 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"しかし、Debianですべての部分を賄うことはできず、いくつかの非フリー版のファー"
+"ムウェアが Debian を運用する上で不可欠です。 このファームウェアはライセンスの"
+"違いにより、使用、改変、配布において制限があります、また、一般的にこれらの"
+"ソースを読んで研究することもできません。"
 
 #. Type: boolean
 #. Description
