--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -30,8 +30,8 @@ msgstr ""
 "Project-Id-Version: lv\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2023-04-30 21:51+0300\n"
-"Last-Translator: Tranzistors <rudolfs.mazurs@gmail.com>\n"
+"PO-Revision-Date: 2024-10-16 15:16+0000\n"
+"Last-Translator: GGLVXD <85647114+GGLVXD@users.noreply.github.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "Language: lv\n"
 "MIME-Version: 1.0\n"
@@ -532,9 +532,8 @@ msgstr "Skenē spoguļserveri..."
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
 msgid "Use non-free firmware?"
-msgstr "Lietot nebrīvo programmatūru?"
+msgstr "Lietot licenzēto programmatūru?"
 
 #. Type: boolean
 #. Description
@@ -545,6 +544,9 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Programmaparatūra ir sava veida programmatūra, kas nodrošina noteiktu "
+"aparatūras komponentu (piemēram, Wi-Fi karšu vai audio mikroshēmojumu) zema "
+"līmeņa kontroli, kas bez tās var nedarboties pilnībā vai vispār."
 
 #. Type: boolean
 #. Description
@@ -556,6 +558,10 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"Lai gan tā nepavisam nav daļa no Debian, dažas bezmaksas programmaparatūras "
+"ir izveidotas darbam ar Debian. Šai programmaparatūrai ir dažādas licences, "
+"kas ierobežo jūsu brīvības izmantot, modificēt vai koplietot programmatūru, "
+"un parasti tai nav avota veidlapu, kuras jūs varētu izpētīt."
 
 #. Type: boolean
 #. Description
